compiler/test/integration/fnord.err
TypeError in [test/integration/fnord.brm:1.17-2.0]: Unbound variable fnord.
