compiler/test/integration/fnord.brm
val foo: __int = fnord

